--- a/WindowsFormsApp1/Garage.csproj
+++ b/WindowsFormsApp1/Garage.csproj
@@ -47,14 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\AreaDAO.cs" />
     <Compile Include="DAO\BillInfoDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\HangXeDAO.cs" />
     <Compile Include="DAO\HoaDonDAO.cs" />
     <Compile Include="DAO\KhachHangDAO.cs" />
     <Compile Include="DAO\PhuTungDAO.cs" />
+    <Compile Include="DAO\ThongTinHoaDonDAO.cs" />
     <Compile Include="DAO\XeDAO.cs" />
     <Compile Include="DTO\Account.cs" />
+    <Compile Include="DTO\Area.cs" />
     <Compile Include="DTO\BillInfo.cs" />
     <Compile Include="DTO\HangXe.cs" />
     <Compile Include="DTO\HoaDon.cs" />
